Add visual tweaks and more yarn commands (#6)

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -13,3 +13,11 @@
     padding-top: 35px;
     cursor: pointer;
 }
+
+.game-square.x {
+    background-color: #e38a31;
+}
+
+.game-square.o {
+    background-color: #e6e14a;
+}
