--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1,3 +1,28 @@
+#play-again {
+    margin-top: -140px;
+    margin-left: -380px;
+    width: 150px;
+    height: 40px;
+    cursor: pointer;
+    background-color: greenyellow;
+    border: 3px solid green;
+    float: left;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 20px;
+    border-radius: 10px;
+    padding-top: 15px;
+    font-weight: bold;
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+}
+
+#play-again:hover {
+    background-color: #89e200;
+}
+
 .board {
     width: 625px;
 }
